<resources>
    <string name="app_name">Tender</string>
    <string name="action_settings">Settings</string>
    <string name="matches">Matches</string>
    <string name="home_button">home button</string>
    <string name="SwipeUp">more info</string>
    <string name="LessInfo">less info</string>
    <string name="MatchPageText">You\'ve paired with a dish!</string>
    <string name="location">location</string>
    <string name="AvailableAt">Available at:</string>

    <!-- Strings used for dishes -->
    <string name="rareBeefPhoName">Rare Beef Pho, 8.95</string>
    <string name="rareBeefPhoDescription">Any time, any place, always down to pho</string>
    <string name="rareBeefPhoDistance">0.5 mi</string>

    <string name="indochinVietnameseRestaurantName">Indochin Vietnamese Restaurant</string>
    <string name="indochinVietnameseRestaurantHours">(R-T) 11am - 9pm</string>
    <string name="indochinVietnameseRestaurantDineIn">Yes</string>
    <string name="indochinVietnameseRestaurantTakeout">Yes</string>
    <string name="indochinVietnameseRestaurantDelivery">No</string>
    <string name="indochinVietnameseRestaurantWebsite">indochingrandave.squarespace.com</string>
    <string name="indochinVietnameseRestaurantPhoneNum">(651)–690–2728</string>


    <string name="theCaliforniaName">The California, 10.95</string>
    <string name="theCaliforniaDescription">Don\'t make me wait, it\'s bacon me crazy</string>
    <string name="theCaliforniaDistance">0.2 mi</string>

    <string name="myBurgerName">My Burger</string>
    <string name="myBurgerHours">(M-U) 11am - 10pm</string>
    <string name="myBurgerDineIn">Yes</string>
    <string name="myBurgerTakeout">Yes</string>
    <string name="myBurgerDelivery">Yes</string>
    <string name="myBurgerWebsite">myburgerusa.com</string>
    <string name="myBurgerPhoneNum">(651)–330–7816</string>


    <string name="theHealingPlateName">The Healing Plate</string>
    <string name="seafoodBoilName">Seafood Boil</string>


    <string name="countryFriedSteakAndEggsName">Country Fried Steak and Egg, 13.5</string>
    <string name="countryFriedSteakAndEggsDescription">authentic country fried steak and egg</string>
    <string name="countryFriedSteakAndEggsDistance">0.5 miles away</string>

    <string name="NCname">The Neighborhood Cafe</string>
    <string name="theNeighborhoodCafeHours">6:30AM-9PM(Sun-Fri)</string>
    <string name="theNeighborhoodCafeWebsite">http://www.theneighborhoodcafemn.com/</string>
    <string name="theNeighborhoodCafePhoneNum">(651)644–8887</string>
    <string name="theNeighborhoodCafeDineIn">No</string>
    <string name="theNeighborhoodCafeTakeout">yes</string>
    <string name="theNeighborhoodCafeDelivery">No</string>


    <string name="chickenShawarmaName">chicken shawarma, 7.95</string>
    <string name="chickenShawarmaDescription">pita never warmed me enough.
        Looking for additional flavor in my plain life</string>
    <string name="chickenShawarmaDistance">0.2 mi</string>

    <string name="ShishMediterraneanRestaurantName">Shish Mediterranean Restaurant</string>
    <string name="ShishMediterraneanRestaurantHours">(M-S) 8am - 9pm</string>
    <string name="ShishMediterraneanRestaurantDineIn">Yes</string>
    <string name="ShishMediterraneanRestaurantTakeout">Yes</string>
    <string name="ShishMediterraneanRestaurantDelivery">Yes</string>
    <string name="ShishMediterraneanRestaurantWebsite">https://www.shishongrand.com/</string>
    <string name="ShishMediterraneanRestaurantPhoneNum">(651)–690–2212</string>
    <string name="lessinfo">Less Info</string>
    <string name="dineIn">"Dine In: "</string>
    <string name="Takeout">Take out: </string>
    <string name="Delivery">delivery: </string>
    <string name="Matched">Matched</string>
    <string name="indochine_distance">0.2 miles away</string>
    <string name="theNeighborhoodCafeDistance">0.5 miles away</string>
    <string name="shishDistance">0.3 miles away</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="website">"Website: "</string>
    <string name="phone">"Phone: "</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="SignUp">sign up</string>
    <string name="Login">login</string>
    <string name="BackToLogin">Already have an account? Login</string>


</resources>