<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="409dp"
    android:layout_height="650dp"
    tools:context="com.example.tender.MoreInfoFragment">

    <ImageButton
        android:id="@+id/BackToMain_fragment"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:background="#00FFFFFF"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back_to_main_icon" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="84dp"
        android:layout_height="21dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/AvailableAt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageView
        android:id="@+id/location3"
        android:layout_width="11dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:contentDescription="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dishname_moreinfo_fragment"
        app:srcCompat="@drawable/locationicon" />

    <TextView
        android:id="@+id/deliveryOption2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="23sp"
        app:layout_constraintStart_toEndOf="@+id/deliveryText"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/dineInText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:width="50sp"
        android:text="@string/dineIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/dineInOption2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="23sp"
        app:layout_constraintStart_toEndOf="@+id/dineInText2"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/takeOutText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/Takeout"
        app:layout_constraintStart_toEndOf="@+id/dineInOption2"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/takeOutOption2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="23sp"
        app:layout_constraintStart_toEndOf="@+id/takeOutText2"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/deliveryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/Delivery"
        app:layout_constraintStart_toEndOf="@+id/takeOutOption2"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/dishname_moreinfo_fragment"
        android:layout_width="380dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:fontFamily="serif"
        android:text="@string/chickenShawarmaName"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="368dp"
        android:layout_height="430dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:cropToPadding="false"
        android:src="@drawable/default_dish_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_dish_image" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="86dp"
        android:layout_height="17dp"
        android:text="Distance"
        app:layout_constraintStart_toEndOf="@+id/location3"
        app:layout_constraintTop_toBottomOf="@+id/dishname_moreinfo_fragment" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:text="RestaurantName"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="Hours"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="6dp"
        android:text="@string/website"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dineInText2" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/dineInText2" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="6dp"
        android:text="@string/phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textView26"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />


</androidx.constraintlayout.widget.ConstraintLayout>